5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4188/executions/1716_2502.log
== TEST (2019-05-14 13:20:18) 
-- CODE:
n=int(input("Entrada: "))
d=0
D=1
e=1
som=0
t=0
from math import *
while(t<n):
	som=som+((-1)/(D*1)**d))*(-1)**e
	D=D+2
	d=d+1
	e=e+1
print(round((som*sqrt(12)),8)
-- ERROR:
File "XXXX", line 9
    som=som+((-1)/(D*1)**d))*(-1)**e
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 13:20:32) 
-- CODE:
n=int(input("Entrada: "))
d=0
D=1
e=1
som=0
t=0
from math import *
while(t<n):
	som=som+((-1)/(D*1)**d)*(-1)**e
	D=D+2
	d=d+1
	e=e+1
print(round((som*sqrt(12)),8)
-- ERROR:
File "XXXX", line 14
    
                                 ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 13:22:53) 
-- CODE:
n=int(input("Entrada: "))
d=0
D=1
e=1
som=0
t=0
from math import *
while(t<n):
	som=som+((-1)/(D*1)**d)*(-1)**e
	D=D+2
	d=d+1
	e=e+1
som=sqrt(12)*som
print(round(som,8)
-- ERROR:
File "XXXX", line 15
    
                      ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 13:26:18) 
-- CODE:
n=int(input("Entrada: "))
d=0
D=1
e=1
som=0
t=0
from math import *
while(t<n):
	som=som+sqrt(12)*((-1)/(D*1)**d)*(-1)**e
	D=D+2
	d=d+1
	e=e+1
print(round(som,8)
-- ERROR:
File "XXXX", line 14
    
                      ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 13:26:50) 
-- CODE:
n=int(input("Entrada: "))
d=0
D=1
e=1
som=0
t=0
from math import *
while(t<n):
	som=som+sqrt(12)*((-1)/(D*1)**d)*(-1)**e
	D=D+2
	d=d+1
	e=e+1
print(round(som,8))
-- ERROR:
File "XXXX", line 14
    
                      ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 13:27:59) 
-- CODE:
n=int(input("Entrada: "))
d=0
D=1
e=1
som=0
t=0
from math import *
while(t<n):
	som=som+sqrt(12)*((-1)/(D*1)**d)*(-1)**e
	D=D+2
	d=d+1
	e=e+1
	t=t+1
print(round(som,8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 14, in <module>
    print(round(som,8))
TypeError: type complex doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 13:28:49) 
-- CODE:
n=int(input("Entrada: "))
d=0
D=1
e=1
so=0
t=0
from math import *
while(t<n):
	so=so+sqrt(12)*((-1)/(D*1)**d)*(-1)**e
	D=D+2
	d=d+1
	e=e+1
	t=t+1
print(round(so,8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 14, in <module>
    print(round(so,8))
TypeError: type complex doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 13:30:58) 
-- CODE:
n=int(input("Entrada: "))
d=0
D=1
e=1
so=0
t=0
from math import *
while(t<n):
	so=so((12)**1/2)*((-1)/(D*1)**d)*(-1)**e
	D=D+2
	d=d+1
	e=e+1
	t=t+1
print(round(so,8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    so=so((12)**1/2)*((-1)/(D*1)**d)*(-1)**e
TypeError: 'int' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 13:31:12) 
-- CODE:
n=int(input("Entrada: "))
d=0
D=1
e=1
so=0
t=0
from math import *
while(t<n):
	so=so+((12)**1/2)*((-1)/(D*1)**d)*(-1)**e
	D=D+2
	d=d+1
	e=e+1
	t=t+1
print(round(so,8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 14, in <module>
    print(round(so,8))
TypeError: type complex doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 13:36:04) 
-- CODE:
n=int(input("Entrada: "))
d=0
D=1
e=1
so=0
t=0
from math import *
while(t<n):
	so=so+((12)**(1/2)*((-1)/(D*1)**d)*(-1)**e
	D=D+2
	d=d+1
	e=e+1
	t=t+1
print(round(so,8))
-- ERROR:
File "XXXX", line 10
    D=D+2
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 13:36:27) 
-- CODE:
n=int(input("Entrada: "))
d=0
D=1
e=1
so=0
t=0
from math import *
while(t<n):
	so=so+((12)**(1/2))*((-1)/(D*1)**d)*(-1)**e
	D=D+2
	d=d+1
	e=e+1
	t=t+1
print(round(so,8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 14, in <module>
    print(round(so,8))
TypeError: type complex doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 13:37:35) 
-- CODE:
n=int(input("Entrada: "))
d=0
D=1
e=1
so=0
t=0
from math import *
while(t<n):
	so=so+((12)**(1/2))*((-1)/((D*1)**d))*(-1)**e
	D=D+2
	d=d+1
	e=e+1
	t=t+1
print(round(so,8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 14, in <module>
    print(round(so,8))
TypeError: type complex doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 13:40:38) 
-- CODE:
n=int(input("Entrada: "))
d=0
D=1
e=1
so=0
t=0
while(t<n):
	so=so+((12)**(1/2))*((-1)/((D*1)**d))*(-1)**e
	D=D+2
	d=d+1
	e=e+1
	t=t+1
print(round(so,8))
-- OUTPUT:
2.43837289
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 13:40:50) 
-- CODE:
n=int(input("Entrada: "))
d=0
D=1
e=1
so=0
t=0
while(t<n):
	so=so+((12)**(1/2))*((-1)/((D*1)**d))*(-1)**e
	D=D+2
	d=d+1
	e=e+1
	t=t+1
print(round(so,8))
-- EXECUTION TIME:
0.163402
-- TEST CASE 1:
---- input:
11
---- correct output:
3.1415933
---- user output:
2.43837289
-- TEST CASE 2:
---- input:
15
---- correct output:
3.14159266
---- user output:
2.43837289
-- TEST CASE 3:
---- input:
8
---- correct output:
3.14156872
---- user output:
2.43837289
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 13:41:31) 
-- CODE:
n=int(input("Entrada: "))
d=0
D=1
e=1
so=0
t=0
while(t<n):
	so=so+((12)**(1/2))*((-1)/((D*1)**d))*(-1)**e
	D=D+2
	d=d+1
	e=e+1
	t=t+1
print(round(so,8))
-- OUTPUT:
2.43837289
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 13:44:08) 
-- CODE:
n=int(input("Entrada: "))
d=0
D=1
e=1
so=0
t=0
while(t<n):
	so=so+((12)**(1/2))*((-1)/((D*1)**d))*((-1)**e)
	D=D+2
	d=d+1
	e=e+1
	t=t+1
print(round(so,8))
-- OUTPUT:
2.43837289
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 13:47:35) 
-- CODE:
n=int(input("Entrada: "))
d=0
D=1
e=1
so=0
t=0
while(t<n):
	so=so+((12)**(1/2))*((-1)/((D*1)**d))*((-1)**e)
	D=D+2
	d=d+1
	e=e+1
	t=t+1
print(round(so,8))
-- OUTPUT:
2.43837289
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 13:49:45) 
-- CODE:
n=int(input("Entrada: "))
d=0
D=1
e=1
so=0
t=0
while(t<n):
	so=so+((12)**(1/2))*((-1)/(D*(1**d))*((-1)**e)
	D=D+2
	d=d+1
	e=e+1
	t=t+1
print(round(so,8))
-- ERROR:
File "XXXX", line 9
    D=D+2
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 13:49:55) 
-- CODE:
n=int(input("Entrada: "))
d=0
D=1
e=1
so=0
t=0
while(t<n):
	so=so+((12)**(1/2))*((-1)/(D*(1**d))*((-1)**e)
	D=D+2
	d=d+1
	e=e+1
	t=t+1
print(round(so,8))
-- ERROR:
File "XXXX", line 9
    D=D+2
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 13:50:17) 
-- CODE:
n=int(input("Entrada: "))
d=0
D=1
e=1
so=0
t=0
while(t<n):
	so=so+((12)**(1/2))*((-1)/(D * (1**d))*((-1)**e)
	D=D+2
	d=d+1
	e=e+1
	t=t+1
print(round(so,8))
-- ERROR:
File "XXXX", line 9
    D=D+2
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 13:51:12) 
-- CODE:
n=int(input("Entrada: "))
d=0
y=1
e=1
so=0
t=0
while(t<n):
	so=so+((12)**(1/2))*((-1)/(y * (1**d))*((-1)**e)
	y=y+2
	d=d+1
	e=e+1
	t=t+1
print(round(so,8))
-- ERROR:
File "XXXX", line 9
    y=y+2
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 13:52:45) 
-- CODE:
n=int(input("Entrada: "))
d=0
y=1
e=1
so=0
t=0
while(t<n):
	so=so+((12)**(1/2))*((-1)/(y * (3**d))*((-1)**e)
	y=y+2
	d=d+1
	e=e+1
	t=t+1
print(round(so,8))
-- ERROR:
File "XXXX", line 9
    y=y+2
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 15:57:47) 
-- CODE:
n=int(input("Entrada: "))
d=0
y=1
e=1
so=0
t=0
while(t<n):
	so=so+((12)**(1/2))*((-1)/(y * (3**d))*((-1)**e)
	y=y+2
	d=d+1
	e=e+1
	t=t+1
print(round(so,8))
-- ERROR:
File "XXXX", line 9
    y=y+2
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 15:58:01) 
-- CODE:
n=int(input("Entrada: "))
d=0
y=1
e=1
so=0
t=0
while(t<n):
	so=so+((12)**(1/2))*((-1)/(y * (3**d))*((-1)**e)
	y=y+2
	d=d+1
	e=e+1
	t=t+1
print(round(so,8))
-- ERROR:
File "XXXX", line 9
    y=y+2
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 15:58:06) 
-- CODE:
n=int(input("Entrada: "))
d=0
y=1
e=1
so=0
t=0
while(t<n):
	so=so+((12)**(1/2))*((-1)/(y * (3**d))*((-1)**e)
	y=y+2
	d=d+1
	e=e+1
	t=t+1
print(round(so,8))
-- ERROR:
File "XXXX", line 9
    y=y+2
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 15:59:02) 
-- CODE:
n=int(input("Entrada: "))
d=0
y=1
e=1
so=0
t=0
while(t<n):
	so=so+((12)**(1/2))*((-1)/(y * (3**d))*((-1)**e))
	y=y+2
	d=d+1
	e=e+1
	t=t+1
print(round(so,8))
-- OUTPUT:
3.1415933
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 16:06:32) 
-- CODE:
n=int(input("Entrada: "))
d=0
y=1
e=1
so=0
t=0
while(t<n):
	so=so+((12)**(1/2))*((-1)/(y * (3**d))*((-1)**e))
	y=y+2
	d=d+1
	e=e+1
	t=t+1
print(round(so,8))
-- OUTPUT:
3.1415933
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 16:06:46) 
-- CODE:
n=int(input("Entrada: "))
d=0
y=1
e=1
so=0
t=0
while(t<n):
	so=so+((12)**(1/2))*((-1)/(y * (3**d))*((-1)**e))
	y=y+2
	d=d+1
	e=e+1
	t=t+1
print(round(so,8))
-- EXECUTION TIME:
0.131897
-- TEST CASE 1:
---- input:
11
---- correct output:
3.1415933
---- user output:
3.1415933
-- TEST CASE 2:
---- input:
15
---- correct output:
3.14159266
---- user output:
3.14159266
-- TEST CASE 3:
---- input:
8
---- correct output:
3.14156872
---- user output:
3.14156872
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
